# pyconstrainedpacker

./: .flake8  .mypy.ini  README.md  mypy.ini  pyproject.toml
pyconstrainedpacker/: Allocation.py  ArticleShipment.py  Group.py  MockDemand.py  PackingGroup.py  Shipment.py  Supply.py  __init__.py  main.py
tests/: playground.py  test_group_creation.py  test_realistic_run.py  test_simple_run.py
