[tool.poetry]
name = "pyconstrainedpacker"
version = "0.1.0"
description = "A python prototype for the constrainedpacker"
authors = ["Eike Fokken <e.fokken+constrainedpacker@posteo.de>"]
license = "AGPL-3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
casadi = "^3.6.4"
click = "^8.1.7"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
importmagic = "^0.1.7"
epc = "^0.0.5"
mypy = "^1.7.0"
python-lsp-server = {extras = ["all"], version = "^1.9.0"}
pylsp-mypy = "^0.6.8"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
