[tool.poetry]
name = "pyconstrainedpacker"
version = "0.1.0"
description = "A python prototype for the constrainedpacker"
authors = ["Eike Fokken <e.fokken+constrainedpacker@posteo.de>"]
license = "AGPL-3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
casadi = "^3.6.4"
click = "^8.1.7"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
importmagic = "^0.1.7"
epc = "^0.0.5"
mypy = "^1.7.0"
python-lsp-server = "^1.10.1"
pylsp-mypy = "^0.6.8"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
