[tool.poetry]
name = "pyconstrainedpacker"
version = "0.1.0"
description = "A python prototype for the constrainedpacker"
authors = ["Eike Fokken <e.fokken+constrainedpacker@posteo.de>"]
license = "AGPL-3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
casadi = "^3.7.2"
click = "^8.3.0"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
importmagic = "^0.1.7"
epc = "^0.0.5"
mypy = "^1.18.2"
python-lsp-server = "^1.13.1"
pylsp-mypy = "^0.7.0"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
